src/main/java/parser/TriALQLParser.java
/*
* Copyright (C) 2017 University of Freiburg.
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
* http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*
* The TriAL-QL Engine is a research project at the department of 
* computer science, University of Freiburg. 
*
* More information on the project:
* http://dbis.informatik.uni-freiburg.de/forschung/projekte/DiPoS/
* zablocki@informatik.uni-freiburg.de
*/

package parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.sql.SQLException;
import java.util.ArrayList;

/**
 * Parser: Auto generated from ANTLR and the E-TriAL-QL grammar.
 */
@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class TriALQLParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int T__0 = 1, T__1 = 2, Select = 3, From = 4, Join = 5, On = 6, Store = 7, Provenance = 8,
			As = 9, Using = 10, Left = 11, Right = 12, And = 13, Or = 14, Drop = 15, Union = 16, Minus = 17,
			Intersect = 18, Filter = 19, With = 20, Load = 21, Cache = 22, Merge = 23, Star = 24, Plus = 25, Pos = 26,
			Equals = 27, NEquals = 28, GTEquals = 29, LTEquals = 30, GT = 31, LT = 32, Apostrophe = 33, Quote = 34,
			Semikolon = 35, OBracket = 36, CBracket = 37, Comma = 38, Bool = 39, Identifier = 40, String = 41,
			PositiveInt = 42, Int = 43, Comment = 44, Whitespace = 45;
	public static final int RULE_parse = 0, RULE_block = 1, RULE_selectBlock = 2, RULE_selectRecursionBlock = 3,
			RULE_selectJoinBlock = 4, RULE_operatorBlock = 5, RULE_mergeBlock = 6, RULE_storeBlock = 7,
			RULE_loadBlock = 8, RULE_dropBlock = 9, RULE_equationList = 10, RULE_equation = 11,
			RULE_equationOperator = 12, RULE_term = 13, RULE_literal = 14, RULE_selection = 15,
			RULE_selectionRecursion = 16, RULE_selectionProvenanceCreator = 17, RULE_selectionProvenanceAppender = 18,
			RULE_recursionType = 19, RULE_kleeneDepth = 20, RULE_filterExpr = 21, RULE_filterExprAnd = 22;
	public static final String[] ruleNames = { "parse", "block", "selectBlock", "selectRecursionBlock",
			"selectJoinBlock", "operatorBlock", "mergeBlock", "storeBlock", "loadBlock", "dropBlock", "equationList",
			"equation", "equationOperator", "term", "literal", "selection", "selectionRecursion",
			"selectionProvenanceCreator", "selectionProvenanceAppender", "recursionType", "kleeneDepth", "filterExpr",
			"filterExprAnd" };

	private static final String[] _LITERAL_NAMES = { null, "'r1'", "'r2'", "'SELECT'", "'FROM'", "'JOIN'", "'ON'",
			"'STORE'", "'PROVENANCE'", "'AS'", "'USING'", "'left'", "'right'", "'AND'", "'OR'", "'DROP'", "'UNION'",
			"'MINUS'", "'INTERSECT'", "'FILTER'", "'WITH'", "'LOAD'", "'CACHE'", "'MERGE'", "'*'", "'+'", null, "'='",
			"'!='", "'>='", "'<='", "'>'", "'<'", "'''", "'\"'", "';'", "'['", "']'", "','" };
	private static final String[] _SYMBOLIC_NAMES = { null, null, null, "Select", "From", "Join", "On", "Store",
			"Provenance", "As", "Using", "Left", "Right", "And", "Or", "Drop", "Union", "Minus", "Intersect", "Filter",
			"With", "Load", "Cache", "Merge", "Star", "Plus", "Pos", "Equals", "NEquals", "GTEquals", "LTEquals", "GT",
			"LT", "Apostrophe", "Quote", "Semikolon", "OBracket", "CBracket", "Comma", "Bool", "Identifier", "String",
			"PositiveInt", "Int", "Comment", "Whitespace" };
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "TriALQL.g4";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public TriALQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() {
			return getToken(TriALQLParser.EOF, 0);
		}

		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}

		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class, i);
		}

		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_parse;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).enterParse(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).exitParse(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
						{
							setState(46);
							block();
						}
					}
					setState(49);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ((((_la) & ~0x3f) == 0
						&& ((1L << _la) & ((1L << Store) | (1L << Drop) | (1L << Load) | (1L << Identifier))) != 0));
				setState(51);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode Semikolon() {
			return getToken(TriALQLParser.Semikolon, 0);
		}

		public SelectBlockContext selectBlock() {
			return getRuleContext(SelectBlockContext.class, 0);
		}

		public SelectRecursionBlockContext selectRecursionBlock() {
			return getRuleContext(SelectRecursionBlockContext.class, 0);
		}

		public SelectJoinBlockContext selectJoinBlock() {
			return getRuleContext(SelectJoinBlockContext.class, 0);
		}

		public OperatorBlockContext operatorBlock() {
			return getRuleContext(OperatorBlockContext.class, 0);
		}

		public StoreBlockContext storeBlock() {
			return getRuleContext(StoreBlockContext.class, 0);
		}

		public LoadBlockContext loadBlock() {
			return getRuleContext(LoadBlockContext.class, 0);
		}

		public DropBlockContext dropBlock() {
			return getRuleContext(DropBlockContext.class, 0);
		}

		public MergeBlockContext mergeBlock() {
			return getRuleContext(MergeBlockContext.class, 0);
		}

		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_block;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).enterBlock(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(61);
				_errHandler.sync(this);
				switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
				case 1: {
					setState(53);
					selectBlock();
				}
					break;
				case 2: {
					setState(54);
					selectRecursionBlock();
				}
					break;
				case 3: {
					setState(55);
					selectJoinBlock();
				}
					break;
				case 4: {
					setState(56);
					operatorBlock();
				}
					break;
				case 5: {
					setState(57);
					storeBlock();
				}
					break;
				case 6: {
					setState(58);
					loadBlock();
				}
					break;
				case 7: {
					setState(59);
					dropBlock();
				}
					break;
				case 8: {
					setState(60);
					mergeBlock();
				}
					break;
				}
				setState(63);
				match(Semikolon);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectBlockContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() {
			return getTokens(TriALQLParser.Identifier);
		}

		public TerminalNode Identifier(int i) {
			return getToken(TriALQLParser.Identifier, i);
		}

		public TerminalNode Equals() {
			return getToken(TriALQLParser.Equals, 0);
		}

		public TerminalNode Select() {
			return getToken(TriALQLParser.Select, 0);
		}

		public SelectionContext selection() {
			return getRuleContext(SelectionContext.class, 0);
		}

		public TerminalNode From() {
			return getToken(TriALQLParser.From, 0);
		}

		public TerminalNode With() {
			return getToken(TriALQLParser.With, 0);
		}

		public SelectionProvenanceCreatorContext selectionProvenanceCreator() {
			return getRuleContext(SelectionProvenanceCreatorContext.class, 0);
		}

		public TerminalNode Filter() {
			return getToken(TriALQLParser.Filter, 0);
		}

		public FilterExprContext filterExpr() {
			return getRuleContext(FilterExprContext.class, 0);
		}

		public SelectBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_selectBlock;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).enterSelectBlock(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).exitSelectBlock(this);
		}
	}

	public final SelectBlockContext selectBlock() throws RecognitionException {
		SelectBlockContext _localctx = new SelectBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_selectBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(65);
				match(Identifier);
				setState(66);
				match(Equals);
				setState(67);
				match(Select);
				setState(68);
				selection();
				setState(71);
				_la = _input.LA(1);
				if (_la == With) {
					{
						setState(69);
						match(With);
						setState(70);
						selectionProvenanceCreator();
					}
				}

				setState(73);
				match(From);
				setState(74);
				match(Identifier);
				setState(77);
				_la = _input.LA(1);
				if (_la == Filter) {
					{
						setState(75);
						match(Filter);
						setState(76);
						filterExpr();
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectRecursionBlockContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() {
			return getTokens(TriALQLParser.Identifier);
		}

		public TerminalNode Identifier(int i) {
			return getToken(TriALQLParser.Identifier, i);
		}

		public TerminalNode Equals() {
			return getToken(TriALQLParser.Equals, 0);
		}

		public TerminalNode Select() {
			return getToken(TriALQLParser.Select, 0);
		}

		public SelectionRecursionContext selectionRecursion() {
			return getRuleContext(SelectionRecursionContext.class, 0);
		}

		public TerminalNode From() {
			return getToken(TriALQLParser.From, 0);
		}

		public TerminalNode On() {
			return getToken(TriALQLParser.On, 0);
		}

		public EquationListContext equationList() {
			return getRuleContext(EquationListContext.class, 0);
		}

		public TerminalNode Using() {
			return getToken(TriALQLParser.Using, 0);
		}

		public RecursionTypeContext recursionType() {
			return getRuleContext(RecursionTypeContext.class, 0);
		}

		public TerminalNode With() {
			return getToken(TriALQLParser.With, 0);
		}

		public SelectionProvenanceAppenderContext selectionProvenanceAppender() {
			return getRuleContext(SelectionProvenanceAppenderContext.class, 0);
		}

		public TerminalNode Filter() {
			return getToken(TriALQLParser.Filter, 0);
		}

		public FilterExprContext filterExpr() {
			return getRuleContext(FilterExprContext.class, 0);
		}

		public KleeneDepthContext kleeneDepth() {
			return getRuleContext(KleeneDepthContext.class, 0);
		}

		public SelectRecursionBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_selectRecursionBlock;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).enterSelectRecursionBlock(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				try {
					((TriALQLListener) listener).exitSelectRecursionBlock(this);
				} catch (SQLException e) {
					// TODO Auto-generated catch block
					e.printStackTrace();
				}
		}
	}

	public final SelectRecursionBlockContext selectRecursionBlock() throws RecognitionException {
		SelectRecursionBlockContext _localctx = new SelectRecursionBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_selectRecursionBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(79);
				match(Identifier);
				setState(80);
				match(Equals);
				setState(81);
				match(Select);
				setState(82);
				selectionRecursion();
				setState(85);
				_la = _input.LA(1);
				if (_la == With) {
					{
						setState(83);
						match(With);
						setState(84);
						selectionProvenanceAppender();
					}
				}

				setState(87);
				match(From);
				setState(88);
				match(Identifier);
				setState(89);
				match(On);
				setState(90);
				equationList();
				setState(93);
				_la = _input.LA(1);
				if (_la == Filter) {
					{
						setState(91);
						match(Filter);
						setState(92);
						filterExpr();
					}
				}

				setState(95);
				match(Using);
				setState(96);
				recursionType();
				setState(98);
				_la = _input.LA(1);
				if (_la == OBracket) {
					{
						setState(97);
						kleeneDepth();
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectJoinBlockContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() {
			return getTokens(TriALQLParser.Identifier);
		}

		public TerminalNode Identifier(int i) {
			return getToken(TriALQLParser.Identifier, i);
		}

		public TerminalNode Equals() {
			return getToken(TriALQLParser.Equals, 0);
		}

		public TerminalNode Select() {
			return getToken(TriALQLParser.Select, 0);
		}

		public SelectionContext selection() {
			return getRuleContext(SelectionContext.class, 0);
		}

		public TerminalNode From() {
			return getToken(TriALQLParser.From, 0);
		}

		public TerminalNode Join() {
			return getToken(TriALQLParser.Join, 0);
		}

		public TerminalNode With() {
			return getToken(TriALQLParser.With, 0);
		}

		public SelectionProvenanceAppenderContext selectionProvenanceAppender() {
			return getRuleContext(SelectionProvenanceAppenderContext.class, 0);
		}

		public TerminalNode On() {
			return getToken(TriALQLParser.On, 0);
		}

		public EquationListContext equationList() {
			return getRuleContext(EquationListContext.class, 0);
		}

		public TerminalNode Filter() {
			return getToken(TriALQLParser.Filter, 0);
		}

		public FilterExprContext filterExpr() {
			return getRuleContext(FilterExprContext.class, 0);
		}

		public SelectJoinBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_selectJoinBlock;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).enterSelectJoinBlock(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).exitSelectJoinBlock(this);
		}
	}

	public final SelectJoinBlockContext selectJoinBlock() throws RecognitionException {
		SelectJoinBlockContext _localctx = new SelectJoinBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_selectJoinBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(100);
				match(Identifier);
				setState(101);
				match(Equals);
				setState(102);
				match(Select);
				setState(103);
				selection();
				setState(106);
				_la = _input.LA(1);
				if (_la == With) {
					{
						setState(104);
						match(With);
						setState(105);
						selectionProvenanceAppender();
					}
				}

				setState(108);
				match(From);
				setState(109);
				match(Identifier);
				setState(110);
				match(Join);
				setState(111);
				match(Identifier);
				setState(114);
				_la = _input.LA(1);
				if (_la == On) {
					{
						setState(112);
						match(On);
						setState(113);
						equationList();
					}
				}

				setState(118);
				_la = _input.LA(1);
				if (_la == Filter) {
					{
						setState(116);
						match(Filter);
						setState(117);
						filterExpr();
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorBlockContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() {
			return getTokens(TriALQLParser.Identifier);
		}

		public TerminalNode Identifier(int i) {
			return getToken(TriALQLParser.Identifier, i);
		}

		public TerminalNode Equals() {
			return getToken(TriALQLParser.Equals, 0);
		}

		public TerminalNode Union() {
			return getToken(TriALQLParser.Union, 0);
		}

		public TerminalNode Minus() {
			return getToken(TriALQLParser.Minus, 0);
		}

		public TerminalNode Intersect() {
			return getToken(TriALQLParser.Intersect, 0);
		}

		public TerminalNode With() {
			return getToken(TriALQLParser.With, 0);
		}

		public TerminalNode Provenance() {
			return getToken(TriALQLParser.Provenance, 0);
		}

		public OperatorBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_operatorBlock;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).enterOperatorBlock(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).exitOperatorBlock(this);
		}
	}

	public final OperatorBlockContext operatorBlock() throws RecognitionException {
		OperatorBlockContext _localctx = new OperatorBlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_operatorBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(120);
				match(Identifier);
				setState(121);
				match(Equals);
				setState(122);
				match(Identifier);
				setState(123);
				_la = _input.LA(1);
				if (!((((_la) & ~0x3f) == 0
						&& ((1L << _la) & ((1L << Union) | (1L << Minus) | (1L << Intersect))) != 0))) {
					_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(124);
				match(Identifier);
				setState(127);
				_la = _input.LA(1);
				if (_la == With) {
					{
						setState(125);
						match(With);
						setState(126);
						match(Provenance);
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MergeBlockContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() {
			return getTokens(TriALQLParser.Identifier);
		}

		public TerminalNode Identifier(int i) {
			return getToken(TriALQLParser.Identifier, i);
		}

		public List<TerminalNode> Merge() {
			return getTokens(TriALQLParser.Merge);
		}

		public TerminalNode Merge(int i) {
			return getToken(TriALQLParser.Merge, i);
		}

		public MergeBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_mergeBlock;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).enterMergeBlock(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).exitMergeBlock(this);
		}
	}

	public final MergeBlockContext mergeBlock() throws RecognitionException {
		MergeBlockContext _localctx = new MergeBlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mergeBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(129);
				match(Identifier);
				setState(130);
				match(Merge);
				setState(131);
				match(Identifier);
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == Merge) {
					{
						{
							setState(132);
							match(Merge);
							setState(133);
							match(Identifier);
						}
					}
					setState(138);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StoreBlockContext extends ParserRuleContext {
		public TerminalNode Store() {
			return getToken(TriALQLParser.Store, 0);
		}

		public List<TerminalNode> Identifier() {
			return getTokens(TriALQLParser.Identifier);
		}

		public TerminalNode Identifier(int i) {
			return getToken(TriALQLParser.Identifier, i);
		}

		public TerminalNode As() {
			return getToken(TriALQLParser.As, 0);
		}

		public TerminalNode Provenance() {
			return getToken(TriALQLParser.Provenance, 0);
		}

		public StoreBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_storeBlock;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).enterStoreBlock(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).exitStoreBlock(this);
		}
	}

	public final StoreBlockContext storeBlock() throws RecognitionException {
		StoreBlockContext _localctx = new StoreBlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_storeBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(139);
				match(Store);
				setState(141);
				_la = _input.LA(1);
				if (_la == Provenance) {
					{
						setState(140);
						match(Provenance);
					}
				}

				setState(143);
				match(Identifier);
				setState(144);
				match(As);
				setState(145);
				match(Identifier);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoadBlockContext extends ParserRuleContext {
		public TerminalNode Load() {
			return getToken(TriALQLParser.Load, 0);
		}

		public TerminalNode Identifier() {
			return getToken(TriALQLParser.Identifier, 0);
		}

		public TerminalNode Cache() {
			return getToken(TriALQLParser.Cache, 0);
		}

		public LoadBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_loadBlock;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).enterLoadBlock(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).exitLoadBlock(this);
		}
	}

	public final LoadBlockContext loadBlock() throws RecognitionException {
		LoadBlockContext _localctx = new LoadBlockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_loadBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(147);
				match(Load);
				setState(149);
				_la = _input.LA(1);
				if (_la == Cache) {
					{
						setState(148);
						match(Cache);
					}
				}

				setState(151);
				match(Identifier);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DropBlockContext extends ParserRuleContext {
		public TerminalNode Drop() {
			return getToken(TriALQLParser.Drop, 0);
		}

		public TerminalNode Identifier() {
			return getToken(TriALQLParser.Identifier, 0);
		}

		public TerminalNode Provenance() {
			return getToken(TriALQLParser.Provenance, 0);
		}

		public DropBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_dropBlock;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).enterDropBlock(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).exitDropBlock(this);
		}
	}

	public final DropBlockContext dropBlock() throws RecognitionException {
		DropBlockContext _localctx = new DropBlockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_dropBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(153);
				match(Drop);
				setState(155);
				_la = _input.LA(1);
				if (_la == Provenance) {
					{
						setState(154);
						match(Provenance);
					}
				}

				setState(157);
				match(Identifier);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquationListContext extends ParserRuleContext {
		public List<EquationContext> equation() {
			return getRuleContexts(EquationContext.class);
		}

		public EquationContext equation(int i) {
			return getRuleContext(EquationContext.class, i);
		}

		public List<TerminalNode> Comma() {
			return getTokens(TriALQLParser.Comma);
		}

		public TerminalNode Comma(int i) {
			return getToken(TriALQLParser.Comma, i);
		}

		public EquationListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_equationList;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).enterEquationList(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof TriALQLListener)
				((TriALQLListener) listener).exitEquationList(this);
		}
	}

	public final EquationListContext equationList() throws RecognitionException {
		EquationListContext _localctx = new EquationListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_equationList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(159);
				equation();
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == Comma) {
					{
						{
							setState(160);
							match(Comma);
							setState(161);
							equation();
						}
					}
					setState(166);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquationContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}

		public TermContext term(int i) {
			return getRuleContext(TermContext.class, i);
		}

		public EquationOperatorContext equationOperator() {
			return getRuleContext(EquationOperatorContext.class, 0);
		}

		public EquationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_equation;
		}
